# TonleDB

./: CNAME  GITHUB_PAGES_SETUP.md  README.md  check-pages-status.sh  index.html  test-pages-deployment.txt  verify-pages-setup.sh
official-docs/: PACKAGING.md  PUBLISHING.md  RUNNING.md  md.md
packaging/: INSTALL.md  Makefile  README.md  build-packages.sh  deploy.sh  install.html  install.sh
packaging/debian/tonledb/DEBIAN/: control  postinst  preinst  prerm
packaging/debian/tonledb/usr/lib/systemd/system/: tonledb.service
packaging/rpm/: tonledb.spec
packaging/systemd/: tonledb.service
repo/: README.md  serve.sh  tonledb.list  tonledb.repo
tonledb/: .dockerignore  .gitignore  .gitleaks.toml  .sops.yaml  Cargo.toml  Dockerfile  Dockerfile.secure  Makefile  README.md  build-optimized.bat  build-optimized.sh  check_select_item.rs  create_backup_toml.ps1  create_wirepg_toml.ps1  deny.toml  test_sql.rs  tonledb.toml
tonledb/.cargo/: config.toml
tonledb/.githooks/: pre-commit  pre-push
tonledb/.github/workflows/: ci.yml  deploy-pages.yml  package.yml  pages.yml  release.yml  secure-ci.yml  supply-chain.yml
tonledb/api/gateway/: nginx.conf
tonledb/api/policies/: ip-allow.conf
tonledb/api/scripts/: idempotency.sh
tonledb/api/waf/: main.conf
tonledb/apparmor/: tonledb.apparmor
tonledb/config/tonledb/: tonledb.toml
tonledb/crates/tonledb-arrow/: Cargo.toml
tonledb/crates/tonledb-arrow/src/: lib.rs
tonledb/crates/tonledb-arrow/tests/: arrow_test.rs
tonledb/crates/tonledb-backup/: Cargo.toml
tonledb/crates/tonledb-backup/src/: lib.rs
tonledb/crates/tonledb-cli/: Cargo.toml
tonledb/crates/tonledb-cli/src/: main.rs
tonledb/crates/tonledb-core/: Cargo.toml
tonledb/crates/tonledb-core/src/: event_sourcing.rs  lib.rs  security.rs  transaction.rs
tonledb/crates/tonledb-core/tests/: event_sourcing_test.rs  index_test.rs  transaction_test.rs
tonledb/crates/tonledb-examples/: Cargo.toml  build.rs
tonledb/crates/tonledb-examples/benches/: observability_benches.rs
tonledb/crates/tonledb-examples/proto/: order_service.proto  product_service.proto  user_service.proto
tonledb/crates/tonledb-examples/src/: async_examples.rs  bulkheads.rs  changefeed.rs  channels.rs  concurrency.rs  coroutines.rs  dataflow.rs  distributed.rs  gpu_simd.rs  lib.rs  main.rs  messaging.rs  observability.rs  parallel.rs  reactive.rs  realtime.rs  state_machines.rs  stm.rs  streams.rs  threads.rs  transactions.rs
tonledb/crates/tonledb-language-server/: Cargo.toml  README.md
tonledb/crates/tonledb-language-server/src/: connection.rs  lib.rs  main.rs
tonledb/crates/tonledb-metrics/: Cargo.toml
tonledb/crates/tonledb-metrics/src/: lib.rs
tonledb/crates/tonledb-network/: Cargo.toml
tonledb/crates/tonledb-network/src/: audit.rs  auth.rs  main.rs  main.rs.bak  tls.rs
tonledb/crates/tonledb-nosql-doc/: Cargo.toml
tonledb/crates/tonledb-nosql-doc/src/: lib.rs
tonledb/crates/tonledb-nosql-doc/tests/: ttl_test.rs
tonledb/crates/tonledb-nosql-kv/: Cargo.toml
tonledb/crates/tonledb-nosql-kv/src/: lib.rs
tonledb/crates/tonledb-sql/: Cargo.toml
tonledb/crates/tonledb-sql/src/: lib.rs
tonledb/crates/tonledb-storage/: Cargo.toml
tonledb/crates/tonledb-storage/src/: crypto.rs  index.rs  lib.rs
tonledb/crates/tonledb-storage/tests/: mvcc_test.rs
tonledb/crates/tonledb-wal/: Cargo.toml
tonledb/crates/tonledb-wal/src/: lib.rs
tonledb/crates/tonledb-wire-pg/: Cargo.toml
tonledb/crates/tonledb-wire-pg/src/: lib.rs
tonledb/docker/: apparmor-tonledb  seccomp.json
tonledb/fuzz/: Cargo.toml
tonledb/fuzz/fuzz_targets/: wal_frame.rs
tonledb/k8s/: deploy-tonledb.yaml
tonledb/k8s/security/: deployment.yaml  networkpolicy.yaml  podsecurity.yaml  seccomp.json
tonledb/policy/opa/: tonledb.rego
tonledb/scripts/: s3-object-lock.sh
tonledb/secrets/: tokens.json  tonledb.prod.enc.toml
tonledb/secrets/tls/: server.crt  server.key
tonledb/src/: main.rs
tonledb/src/security/: content.rs  error_map.rs  etag.rs  headers.rs  hmac_signing.rs  jwt.rs  mod.rs  outbound.rs  pagination.rs  quota.rs  validation.rs
tonledb/tools/admin/: approve_op.sh  toggle_readonly.sh
tonledb/tools/dlp/: redact_json.py
tonledb/tools/scans/: k6_smoke.js  zap_baseline.sh
tonledb/tools/security/: pre_commit.sh  run_all.sh
tonledb/vscode-extension/: .gitignore  README.md  diagnose.bat  diagnose.sh  language-configuration.json  package.json  setup.bat  setup.sh  test.tdb  tsconfig.json
tonledb/vscode-extension/src/: extension.ts
tonledb/vscode-extension/syntaxes/: tonledb-sql.tmLanguage.json
