[workspace]
members = [
  "crates/tonledb-core",
  "crates/tonledb-wal",
  "crates/tonledb-storage",
  "crates/tonledb-sql",
  "crates/tonledb-nosql-kv",
  "crates/tonledb-nosql-doc",
  "crates/tonledb-network",
  "crates/tonledb-cli",
  "crates/tonledb-metrics",
  "crates/tonledb-backup",
  "crates/tonledb-wire-pg",
  "crates/tonledb-examples",
  "crates/tonledb-arrow",
  "crates/tonledb-language-server",
]
resolver = "2"

# Optimization profiles
[profile.dev]
opt-level = 1  # Basic optimizations for faster debug builds
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3  # Full optimizations for release builds
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"  # Link Time Optimization for better performance
codegen-units = 1  # Better optimization but slower compile time
panic = "abort"  # Smaller binary size

[profile.bench]
inherits = "release"
debug = true