[package]
name = "tonledb-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonledb-core = { path = "../tonledb-core" }
tonledb-storage = { path = "../tonledb-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
rayon = "1.7"
tonic = "0.10"
threadpool = "1.0"
actix = "0.13"
crossbeam = "0.8"
druid = "0.8"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
rand = "0.8"
pin-project = "1.0"
crossbeam-epoch = "0.9"
timely = "0.12"
wgpu = "0.19"
bytemuck = "1.0"
prost = "0.12"
tonic-reflection = "0.10"
rtic = { version = "2.0", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal = { version = "0.2", optional = true }
criterion = "0.5"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry-stdout = "0.1"
opentelemetry-semantic-conventions = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "observability_benches"
harness = false

[build-dependencies]
tonic-build = "0.10"

[features]
default = []
embedded = ["rtic", "cortex-m", "cortex-m-rt", "embedded-hal"]