[package]
name = "tonledb-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tonledb-core = { path = "../tonledb-core" }
tonledb-wal = { path = "../tonledb-wal" }
parking_lot = "0.12"
anyhow = "1"
clru = "0.6"
crc32fast = "1"
bloomfilter = "1"
zstd = "0.13"
proptest = "1"
tempfile = "3"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1"
base64 = "0.22"
